updated game history and wrote game function

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <section class="main">
         <h1>Rock Paper Scissors</h1>
-        <p class="user-score">User Score: <span>0</span></p>
-        <p class="cpu-score">CPU Score: <span>0</span></p>
+        <p>User Score: <span class="user-score">0</span></p>
+        <p>CPU Score: <span class="cpu-score">0</span></p>
 
         <button class="choice" value="rock">Rock</button>
         <button class="choice" value="paper">Paper</button>
         <button class="choice" value="scissors">Scissors</button>
 
-        <p class="history">Game History here</p>
+        <p class="history"></p>
 
         <h1 class="winner">Winner goes here</h1>
     </section>
