added footer and simple styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS | Zac Williamson</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,10 +20,12 @@
 
         <p class="history"></p>
 
-        <h1 class="winner">Winner goes here</h1>
+        <h1 class="winner"></h1>
+        
     </section>
     <footer>
-
+        <p>Zac Williamson</p>
+        <a href="https://github.com/supersakana" target="_blank"><i class="fab fa-github fa-2x"></i></a>
     </footer>
     
     <script src="rps.js"></script>
