--- a/index.html
+++ b/index.html
@@ -10,19 +10,26 @@
 </head>
 <body>
     <section class="main">
-        <h1>Rock Paper Scissors</h1>
-        <p>User Score: <span class="user-score">0</span></p>
-        <p>CPU Score: <span class="cpu-score">0</span></p>
+        <h1 class="title">Rock Paper Scissors</h1>
 
-        <button class="choice" value="rock">Rock</button>
-        <button class="choice" value="paper">Paper</button>
-        <button class="choice" value="scissors">Scissors</button>
+        <div class="score-board">
+            <p>User Score: <span class="user-score">0</span></p>
+            <p>CPU Score: <span class="cpu-score">0</span></p>
+        </div>
 
-        <p class="history"></p>
+        <div class="choices">
+            <button class="choice" value="rock">Rock</button>
+            <button class="choice" value="paper">Paper</button>
+            <button class="choice" value="scissors">Scissors</button>
+        </div>
 
-        <h1 class="winner"></h1>
-        
+        <div class="game-data">
+            <p class="history"></p>
+            <h2 class="winner"></h2>
+            <div class="btn-container"></div>
+        </div>
     </section>
+    
     <footer>
         <p>Zac Williamson</p>
         <a href="https://github.com/supersakana" target="_blank"><i class="fab fa-github fa-2x"></i></a>
